- Fix bold/strong on comments - Fix spinner on firefox and newer chrome - Fix flex container on chrome 48+

--- a/pillar-web/src/styles/_comments.sass
+++ b/pillar-web/src/styles/_comments.sass
@@ -105,6 +105,9 @@
 				p
 					line-height: 1.3em
 
+				strong, b
+					font-weight: 500
+
 			/* Rating, and actions such as reply */
 			.comment-meta
 				display: flex
